# ObjectTracker-DifferenceFinder

./: .gitignore  README.md
TestGetDesktop/: CMakeLists.txt  TestGetDesktop.cpp  pch.h
